# MutexGuarded

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: coverage.yml
Source/: MutexGuarded.sln
Source/MutexGuarded/: BoostTraits.hpp  MutexGuarded.hpp  MutexGuarded.vcxproj  MutexGuarded.vcxproj.filters  boost_mutex_traits.hpp  main.cpp  mutex_guarded.hpp  nonstd.hpp  unit_tests.hpp
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
source/: boost_mutex_traits.h  future_std.h  mutex_guarded.h
tests/: unit_tests.cpp
